Fix ugly scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ a {
 .content {
     display: flex;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .info {
@@ -64,7 +64,7 @@ a {
 
 .socials {
     flex: 1 1 50%;
-    overflow-y: scroll;
+    overflow-y: auto;
     display: flex;
     align-items: center;
 }
